--- a/.github/workflows/build_documentation.yml
+++ b/.github/workflows/build_documentation.yml
@@ -23,5 +23,5 @@ jobs:
 
       - name: Build the documentation with Sphinx
         run: |
-          # pip install -r requirements.txt
+          pip install -r requirements-doc.txt
           sphinx-build -b html docs docs/build/html
