reorganizing extra dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,21 +31,15 @@ packages = find:
 
 
 [options.extras_require]
-plotting =
+notebooks =
     matplotlib
     seaborn
-
-notebooks =
     flax
     blackjax
     graphviz
 
 doc =
-    matplotlib
-    seaborn
-    flax
-    scikit-learn
-    blackjax
+    %(notebooks)%
     sphinx
     sphinx-autobuild
     myst-nb
@@ -58,9 +52,7 @@ test =
 	pytest>=3.9
 	pytest-cov
 
-# A combination of dependencies useful for developers
+# A combination of dependencies required for developers
 dev =
-	%(plotting)s
-	%(notebooks)s
 	%(doc)s
 	%(test)s
