--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ notebooks =
     graphviz
 
 doc =
-    %(notebooks)%
+    %(notebooks)s
     sphinx
     sphinx-autobuild
     myst-nb
@@ -48,11 +48,11 @@ doc =
 
 test =
     codecov
-	coverage
-	pytest>=3.9
-	pytest-cov
+    coverage
+    pytest>=3.9
+    pytest-cov
 
 # A combination of dependencies required for developers
 dev =
-	%(doc)s
-	%(test)s
+    %(doc)s
+    %(test)s
