--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -e .[dev]
+        pip install -e '.[dev]'
 
     - name: Run tests
       run: pytest
