improving the api documentation format

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,8 @@ doc =
     %(notebooks)s
     sphinx
     sphinx-autobuild
+    sphinx_autodoc_typehints
+    sphinx-math-dollar
     myst-nb
     jupytext
     sphinx-book-theme
