adding typing-extensions and beartype dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,8 @@ install_requires =
     tensorflow_probability
     scikit-learn
     jaxtyping
+    typing-extensions
+    beartype @ git+https://github.com/beartype/beartype
 
 packages = find:
 
