Add direct link for jax-tqdm package

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     typing-extensions
     torchvision
     augly
-    jax-tqdm
+    jax-tqdm @ git+https://github.com/jeremiecoullon/jax-tqdm.git
 
 packages = find:
 
