Resolve conflict issue in dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
     jaxtyping
     typing-extensions
     torchvision
-    augly
+    augly >= 1.0.0
     jax-tqdm @ git+https://github.com/jeremiecoullon/jax-tqdm.git
 
 packages = find:
